Fix UX source link bug on mobile

--- a/docs/gte-viz.css
+++ b/docs/gte-viz.css
@@ -100,8 +100,7 @@
       content: '\2716'; }
 
 .gteviz-infobox {
-  display: none;
-  z-index: -99; }
+  display: none; }
   .gteviz-infobox--visible {
     line-height: 24px;
     font-size: 14px;
