--- a/src/components/data-infobox.scss
+++ b/src/components/data-infobox.scss
@@ -35,7 +35,7 @@
 .gteviz-infobox {
   display: none;
   // visibility: hidden;
-  z-index: -99;
+  // z-index: -99;
 
   &--visible {
     @include visible;
